Logica contract